# DIYSEC

./: README.md
backend/: CMakeLists.txt  bootstrap.sh
backend/camera/include/: broadcaster.hpp
backend/camera/src/: broadcaster.cpp  camera.cpp
backend/server/include/: api.hpp  auth.hpp  camera.hpp  clientmanager.hpp  database.hpp  uuid.hpp
backend/server/src/: api.cpp  auth.cpp  camera.cpp  database.cpp  server.cpp  uuid.cpp
backend/shared/include/: message.hpp
backend/shared/src/: message.cpp
camera/: CMakeCache.txt  CMakeLists.txt  Makefile  camera  cmake_install.cmake
camera/src/: camera.cpp
client/: package-lock.json
client/src/routes/: +page.svelte
frontend/: package-lock.json  package.json
frontend/src/lib/: User.ts  camera.ts  camera2.ts  recording.ts  session.ts
frontend/src/routes/: +page.svelte  Feed.svelte  feed.svelte  header.svelte  login.svelte
frontend/src/routes/Recording/: +page.svelte  RecordingGUI.svelte
frontend/src/routes/UserInfo/: +page.svelte  UserInfoGUI.svelte
frontend/src/routes/UserInfoGUI.svelte/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte  dashboardGUI.svelte
frontend/src/routes/login/: +page.svelte  login-form.svelte
frontend/src/routes/register/: +page.svelte  register-form.svelte
frontend/src/stores/: userStore.ts
server/: CMakeCache.txt  Makefile  cmake_install.cmake  database.sqlite3  server
server/include/: api.hpp  camera.hpp  database.hpp
server/src/: api.cpp  camera.cpp  database.cpp  server.cpp
